--- a/front/statique/bootstrap/index.html
+++ b/front/statique/bootstrap/index.html
@@ -10,33 +10,37 @@
 </head>
 
 <body>
-    <div class="container" style="margin: auto;">
-        <div class="row">
-            <img src="jarditou_html_zip/images/jarditou_logo.jpg" width="200px">
-            <h1 class="text-center">Tout le jardin</h1>
+    <div class="container">
+        <div class="row ">
+            <div class="col-lg-8">
+                <img class="img-fluid " width="200 " src="jarditou_html_zip/images/jarditou_logo.jpg ">
+            </div>
+            <div class="col-lg-4">
+                <h1 class="text-center">Tout le jardin</h1>
+            </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Jarditou.com</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Accueil</a></li>
-                        <li class="nav-item"><a class="nav-link" href="tableau.html">Tableau</a></li>
-                        <li class="nav-item"><a class="nav-link" href="formulaire.html">Contact</a></li>
+            <div class="container-fluid ">
+                <a class="navbar-brand " href="index.html ">Jarditou.com</a>
+                <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation "><span class="navbar-toggler-icon "></span></button>
+                <div class="collapse navbar-collapse " id="navbarSupportedContent ">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item "><a class="nav-link active " aria-current="page " href="index.html ">Accueil</a></li>
+                        <li class="nav-item "><a class="nav-link " href="tableau.html ">Tableau</a></li>
+                        <li class="nav-item "><a class="nav-link " href="formulaire.html ">Contact</a></li>
                     </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Votre promotion" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Rechercher</button>
+                    <form class="d-flex ">
+                        <input class="form-control me-2 " type="search " placeholder="Votre promotion " aria-label="Search ">
+                        <button class="btn btn-outline-success " type="submit ">Rechercher</button>
                     </form>
                 </div>
             </div>
         </nav>
-        <div class="row">
-            <img src="jarditou_html_zip/images/promotion.jpg" class="img-fluid" title="Image responsive">
+        <div class="row ">
+            <img src="jarditou_html_zip/images/promotion.jpg " class="img-fluid " title="Image responsive ">
         </div>
-        <div class="row" style="margin: auto;">
-            <div class="col-lg-8 col-xs-12">
+        <div class="row " style="margin: auto; ">
+            <div class="col-lg-8 col-xs-12 ">
                 <h2>Accueil</h2>
                 <h2>L'entreprise</h2>
                 <p>
@@ -62,29 +66,29 @@
                     Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous souhaitez un devis ? Nous vous le réalisons gratuitement.
                 </p>
             </div>
-            <div class="col-lg-4 col-xs-12 bg-warning text-center">
-                <h1 class="my-4 bg-warning text-dark">[Colonne de droite]</h1>
+            <div class="col-lg-4 col-xs-12 bg-warning text-center ">
+                <h1 class="my-4 bg-warning text-dark ">[Colonne de droite]</h1>
             </div>
         </div>
         <div>
             <div>
-                <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Mentions légales</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Horaires</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Plan du site</a></li>
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-2 ">
+                    <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarText " aria-controls="navbarText " aria-expanded="false " aria-label="Toggle navigation "><span class="navbar-toggler-icon "></span></button>
+                    <div class="collapse navbar-collapse " id="navbarText ">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
+                            <li class="nav-item "><a class="nav-link active " aria-current="page " href="# ">Mentions légales</a></li>
+                            <li class="nav-item "><a class="nav-link " href="# ">Horaires</a></li>
+                            <li class="nav-item "><a class="nav-link " href="# ">Plan du site</a></li>
                         </ul>
-                        <span class="navbar-text">              Pour toute question n'hesitez pas à nous contacter            </span>
+                        <span class="navbar-text ">              Pour toute question n'hesitez pas à nous contacter            </span>
                     </div>
             </div>
         </div>
         </nav>
     </div>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
+    <script type="text/javascript " src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js " integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js " integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG " crossorigin="anonymous "></script>
 </body>
 
 </html>
