--- a/front/statique/bootstrap/formulaire.html
+++ b/front/statique/bootstrap/formulaire.html
@@ -11,9 +11,13 @@
 
 <body>
     <div class="container" style="margin: auto;">
-        <div class="row">
-            <img src="jarditou_html_zip/images/jarditou_logo.jpg" max-width="200px">
-            <h1 class="text-center">Tout le jardin</h1>
+        <div class="row ">
+            <div class="col-lg-8">
+                <img class="img-fluid " width="200 " src="jarditou_html_zip/images/jarditou_logo.jpg ">
+            </div>
+            <div class="col-lg-4">
+                <h1 class="text-center">Tout le jardin</h1>
+            </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
             <div class="container-fluid">
