--- a/front/statique/bootstrap/index.html
+++ b/front/statique/bootstrap/index.html
@@ -19,7 +19,7 @@
                 <h1 class="text-center">Tout le jardin</h1>
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid ">
                 <a class="navbar-brand " href="index.html ">Jarditou.com</a>
                 <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarSupportedContent " aria-controls="navbarSupportedContent " aria-expanded="false " aria-label="Toggle navigation "><span class="navbar-toggler-icon "></span></button>
@@ -42,6 +42,7 @@
         <div class="row " style="margin: auto; ">
             <div class="col-lg-8 col-xs-12 ">
                 <h2>Accueil</h2>
+                <hr>
                 <h2>L'entreprise</h2>
                 <p>
                     Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du paysagisme.
