--- a/front/dynamique/javascript/formulaire.html
+++ b/front/dynamique/javascript/formulaire.html
@@ -64,6 +64,7 @@
                 <br>
                 <label for="nom">Code postal*:</label>
                 <input type="number" class="form-control" name="code postale" id="codepostale" required>
+                <span id="missZip"></span>
                 <br>
                 <label for="nom">Adresse:</label>
                 <input type="text" class="form-control" name="adresse" id="adresse">
@@ -72,7 +73,8 @@
                 <input type="text" class="form-control" name="ville" id="ville">
                 <br>
                 <label for="nom">Email*:</label>
-                <input type="email" name="email" class="form-control" placeholder="Dave.loper@afpa.fr" required>
+                <input type="email" name="email" id="mail" class="form-control" placeholder="Dave.loper@afpa.fr" required>
+                <span id="missMail"></span>
                 <br>
             </fieldset>
             <fieldset>
@@ -80,20 +82,23 @@
                     Votre demande
                 </legend>
                 <label for="sujet">Sujet*</label>
-                <select class="form-select">
-						<option selected>Veuillez séléctionner un sujet</option>
+                <select class="form-select" id="sujet" required>
+						<option selected disabled>Veuillez séléctionner un sujet</option>
 						<option value="Mes commandes">Mes commandes</option>
 						<option value="Question">Question sur un produit</option>
 						<option value="Réclamation">Réclamation</option>
 						<option value="Autre">Autre</option>
 					</select>
+                <span id="missSujet"></span>
                 <br> Votre question*:
-                <textarea name="commentaire" class="form-control" rows="1"></textarea>
+                <textarea name="commentaire" id="question" class="form-control" rows="1" required></textarea>
+                <span id="missQuestion"></span>
             </fieldset>
 
             <br>
             <input class="form-check-input" type="checkbox" name="confirmer" required>
             <label for="accept">* J'accepte le traitement informatique de ce formulaire</label>
+            <span id="missCheck"></span>
 
             <br><br>
             <button type="submit" id="bouton_envoi" class="btn btn-primary">Envoyer</button>
@@ -122,7 +127,7 @@
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
-<script src=""></script>
+    <script src="formulaire.js"></script>
 </body>
 
 </html>
