--- a/front/dynamique/javascript/javascript.html
+++ b/front/dynamique/javascript/javascript.html
@@ -17,6 +17,7 @@
             <div class="text-center mt-5 ">
                 <h1 class="text-white ">Evaluation Javascript</h1>
                 <p class="fw-light fs-5 text-white ">Cliquez sur un bouton pour executer une fonction</p>
+                <p class="fw-light fs-5 text-white ">Chaque fonction est expliquer par une alerte quand vous cliquer sur le bouton</p>
             </div>
             <div class="text-center mt-3 ">
                 <button id="vieux" class="btn btn-primary col-8 shadow " type="button ">Nombre de jeunes, d'adulte et de personnes agées.</button>
@@ -30,9 +31,9 @@
             <div class="text-center mt-4 ">
                 <button id="commande" class="btn btn-primary col-8 shadow " type="button ">Total d'une commande</button>
             </div>
-            
-            <div class="text-center mt-3" >
-                <p class="bg-light"id="table"></p>
+
+            <div class="text-center mt-3">
+                <p class="bg-light" id="table"></p>
             </div>
 
         </div>
