--- a/front/dynamique/javascript/javascript.html
+++ b/front/dynamique/javascript/javascript.html
@@ -16,11 +16,11 @@
         <div class="container-fluid bg-dark .bg-dark.bg-gradient d-flex flex-column">
             <div class="text-center mt-5 ">
                 <h1 class="text-white ">Evaluation Javascript</h1>
-                <p class="fw-light fs-5 text-white ">Cliquez sur un bouton pour executer une fonction</p>
-                <p class="fw-light fs-5 text-white ">Chaque fonction est expliquer par une alerte quand vous cliquer sur le bouton</p>
+                <p class="fw-light fs-5 text-white ">Cliquez sur un bouton pour exécuter une fonction.</p>
+                <p class="fw-light fs-5 text-white ">Chaque fonction est expliquée par une alerte quand vous cliquez sur le bouton.</p>
             </div>
             <div class="text-center mt-3 ">
-                <button id="vieux" class="btn btn-primary col-8 shadow " type="button ">Nombre de jeunes, d'adulte et de personnes agées.</button>
+                <button id="vieux" class="btn btn-primary col-8 shadow " type="button ">Nombre de jeunes, d'adulte et de personnes âgées.</button>
             </div>
             <div class="text-center mt-4 ">
                 <button id="multiple" class="btn btn-primary col-8 shadow " type="button ">Table de multiplication</button>
